# bakarr

./: .env.example  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  DEBT_IMPLEMENTATION_PLAN.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  TODO.md  config.example.toml  config.toml  deno.json  docker-compose.observability.yml  flake.nix  package.json  pnpm-lock.yaml  result  tsconfig.base.json  tsconfig.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
apps/api/: .gitignore  .oxlintrc.json  AGENTS.md  API_ARCHITECTURE_REVIEW_PLAN.md  ARCHITECTURE_DEEPEN.md  CODE_REVIEW_ARCHITECTURE.md  CODE_REVIEW_EIGHTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_ELEVENTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_FIFTEENTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_FIFTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_FOLLOWUP_IMPLEMENTATION_PLAN.md  CODE_REVIEW_FOURTEENTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_FOURTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_NINTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_SECOND_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_SEVENTEENTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_SEVENTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_SIXTEENTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_SIXTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_TENTH_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_THIRD_PASS_IMPLEMENTATION_PLAN.md  CODE_REVIEW_THIRTEENTH_PASS_IMPLEMENTATION_PLAN.md  CONTEXT.md  EFFECT_GUIDE.md  (+15 more)
bakarr-ui/: AGENTS.md  package.json  tailwind.config.js  tsconfig.json  vite.config.js
deploy/: observability.md
docs/: lan-operations.md  reverse-proxy-tls.md
monitoring/: README.md  alerts.yml  dashboard-panels.md  prometheus.yml
nix/: module.nix  package.nix
scripts/: backup.sh  restore.sh
src/: config.rs  constants.rs  lib.rs  main.rs  monitor.rs  scheduler.rs  state.rs
tests/: api_routes_smoke_tests.rs  api_tests.rs  repository_smoke_tests.rs  smoke_tests.rs  system_tests.rs  ws_regression_tests.rs
tools/: dev.ts
(+1953 files in other folders)
