[package]
name = "bakarr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
ffprobe = "0.4.0"
futures = "0.3.31"
html-escape = "0.2.13"
nom = "8.0.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "cookies", "multipart", "form", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-cron-scheduler = "0.14"
time = "0.3"
toml = "0.8"
tower = "0.5"
tower-sessions = "0.14.0"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"
zstd = "0.13.3"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
tracing-loki = { version = "0.2.6", default-features = false, features = ["rustls", "compat-0-2-1"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
url = "2.5.8"
argon2 = "0.5.3"
async-trait = "0.1"
rand = "0.9.2"
html2text = "0.16.7"

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5", features = ["util"] }
sea-orm = { version = "1.1.19", features = ["debug-print"] }

[profile.release]
lto = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
